alignment changes in Contact us page and typecase fixfor searchbar

--- a/app/client/src/pages/ContactUs.css
+++ b/app/client/src/pages/ContactUs.css
@@ -11,8 +11,9 @@
 }
 @media only screen and (min-width: 1200px) {
     .main{
-           height: 70vh; 
+           height: auto; 
            margin-top: 3.8vh;
+           padding-bottom: 2vh;
     }
     
 }
